
                grscreen.cpp
                    removed selectTrackMap()

                grscreen.h
                    removed selectTrackMap()


  data/
      config/raceman
        CMakeLists.txt
        quickrace.xml
            changed standard track
        removed practice.xml
        removed singleevent-challange.xml
        removed singleeven-endurance.xml
      cars/models/primo/
        primo.xml
           removed the fuel cons factor
      data/
        credits.xml
            added Simulated driving assistance developers
        menu/
            mainmenu.xml
                added a back button
                renamed race button
                removed weekend
                removed player
            raceresultsmenu.xml
                added a QuitButton
            soundconfigmenu.xml
                added controls for intervention sound volume
            stopracemenu.xml
                removed controls menu
            optionsmenu.xml
                removed unused menus
            creditsmenu.xml
                added new section
            removed playerconfig.xml
            raceselectmenu.xml
                removed practice and optimizationMT buttons
            soundconfig.xml
                removed sound system option
            stopracemenu.xml
                changed button tips and text
                removed controls, quit and force feedback buttons
            racemanmenu.xml
                changed player button to control button
            forcefeedbackconfigmenu.xml
                changed background image
            controlconfigmenu.xml
                added button for force feedback control

  cmake/
    checks.cmake
        changed IF(OPTION_3RDPARTY_SQLITE3) (removed if)


Deleted:
   src/
      modules/
         simu/
            simuv2.1/
               simu.cpp
                   Removed 'RemoveCar' function
            simu4/
               simu.cpp
                  Removed 'RemoveCar' function